# ai-coding-devtool-plugin

./: .editorconfig  .gitignore  CHANGELOG.md  PROJECT_CONTEXT.md  README.md
apps/api/: README.md  pyproject.toml
apps/api/prompts/change_review/: v1.yaml
apps/api/prompts/commit_message/: v1.yaml
apps/api/prompts/development_plan/: v1.yaml
apps/api/prompts/explain_code/: v1.yaml
apps/api/src/devtool_api/: __init__.py  main.py
apps/api/src/devtool_api/change_review/: __init__.py  models.py  use_case.py
apps/api/src/devtool_api/commit_message/: __init__.py  models.py  use_case.py
apps/api/src/devtool_api/context/: __init__.py  budgeting.py  collector.py  models.py  security.py
apps/api/src/devtool_api/development_plan/: __init__.py  models.py  use_case.py
apps/api/src/devtool_api/explain/: __init__.py  models.py  use_case.py
apps/api/src/devtool_api/llm/: __init__.py  errors.py  fake.py  models.py  openai_config.py  openai_provider.py  provider.py  structured_output.py  structured_output_errors.py
apps/api/src/devtool_api/prompts/: __init__.py  errors.py  models.py  registry.py
apps/api/tests/: test_change_review.py  test_commit_message.py  test_context_budgeting.py  test_context_collector.py  test_context_models.py  test_context_security.py  test_development_plan.py  test_explain_code.py  test_fake_provider.py  test_health.py  test_openai_provider.py  test_prompt_registry.py  test_structured_output.py  test_workflow_quality.py
docs/: architecture.md  demo-guide.md  security.md
evals/: QUALITY_RUBRICS.md  README.md
scripts/: check.ps1
(+31 files in other folders)
